--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,9 @@ matplotlib
 Pillow
 requests
 psutil
+
+analogo:
+for /L %G in (1,1,4); do python src/align/align_dataset_mtcnn.py ~/datasets/lfw/raw ~/datasets/lfw/lfw_mtcnnpy_160 --image_size 160 --margin 32 --random_order --gpu_memory_fraction 0.25
+ allo c/p
+
+::python src/classifier.py TRAIN /home/david/datasets/lfw/lfw_mtcnnalign_160 /home/david/models/model-20170216-091149.pb ~/models/lfw_classifier.pkl --batch_size 1000 --min_nrof_images_per_class 40 --nrof_train_images_per_class 35 --use_split_dataset
