--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ matplotlib
 Pillow
 requests
 psutil
+tkinter
+
+a model protobuf (.pb) file. Link:
+https://github.com/davidsandberg/facenet/wiki#pre-trained-models
